fix(sidebar): 修复侧边栏显示错位问题

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -57,8 +57,13 @@
       margin-right: 16px;
     }
     .el-svg-icon {
-      margin-top: -4px;
       margin-right: 16px;
+      .el-icon {
+        justify-content: flex-start;
+        margin-right: 0;
+        width: 100% !important;
+        font-size: inherit;
+      }
     }
 
     .sub-el-icon {
