feat(TagsView): 增加TagsView的更多操作

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -80,6 +80,10 @@
     .menu-item-container {
       display: flex;
       align-items: center;
+      .el-icon {
+        width: 1em;
+        font-size: inherit;
+      }
     }
 
     // menu hover
